Implementaciones y cambios